[package]
name = "degrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.10.4"
indicatif = "0.17.5"
nix = "0.26.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
