[package]
name = "opio"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
dialoguer = "0.10.4"
futures = "0.3.28"
indicatif = "0.17.5"
nix = "0.26.2"
reqwest = { version = "0.11.18", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.175", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
